# roguelike

./: .gitignore  Readme.md  g.py  main.py  pyproject.toml  saved.sav
game/: action.py  action_tools.py  actions.py  actor_tools.py  color.py  combat.py  components.py  constants.py  creatures.py  dice.py  effect.py  effects.py  input_manager.py  item_tools.py  items.py  procgen.py  rendering.py  spells.py  state.py  states.py  tags.py  travel.py  world_init.py
game/combat/: ai.py  combat.py  combat_types.py  stats.py
game/items/: item_factories.py  item_tools.py  item_types.py  items.py
game/ui/: messages.py  rendering.py
game/world/: procgen.py  world_init.py  world_tools.py
